--- a/mega_backend/.env
+++ b/mega_backend/.env
@@ -1,17 +1,17 @@
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = myedtech4you@gmail.com
-MAIL_PASS = srjnyfduihaboypw
+MAIL_PASS = 
 
-JWT_SECRET = "jwtsecret@23"
+JWT_SECRET = ""
 FOLDER_NAME = "MyEdTech"
 
-RAZORPAY_KEY = rzp_test_NmtWsTZgZbjywe
-RAZORPAY_SECRET = ebDm6xH6DF1HlmVS1phu8XEl
+RAZORPAY_KEY = 
+RAZORPAY_SECRET = 
 
 CLOUD_NAME = draksd8s3
 API_KEY = 396449424564656
-API_SECRET = 88IGr4nM8DSK0T4MQgJVLxCfzuQ
+API_SECRET =
 
-MONGODB_URL = "mongodb+srv://aditya5harma:87T4zGeMpBHoDa7e@cluster0.3c3hbgr.mongodb.net/MyEdTech?retryWrites=true&w=majority"
+MONGODB_URL = "mongodb+srv://aditya5harma:***********e@cluster0.3c3hbgr.mongodb.net/MyEdTech?retryWrites=true&w=majority"
 
 PORT = 4000
